# opinionet_v2

./: .gitignore  README.md  main.py  pyproject.toml  可能的优化方式.md  比赛规则.md
data/TRAIN/: Train_labels_augmented_backtranslate.csv  Train_labels_augmented_makeup_3x.csv  Train_reviews_augmented_backtranslate.csv  Train_reviews_augmented_makeup_3x.csv
opinionet/: __init__.py  config.py
opinionet/data/: augmentation.py  back_translate.py  dataset.py
opinionet/evaluation/: metrics.py
opinionet/models/: opinnet.py
opinionet/overwatch/: overwatch.py
opinionet/scripts/: ensemble.py  evaluate.py  pretrain.py  train.py  visualize.py
opinionet/training/: scheduler.py  trainer.py
opinionet/utils/: common.py
