[project]
name = "opinionet"
version = "2.0.0"
description = "OpinioNet: One-stage End-to-End Entity-Relation Extraction for Opinion Mining"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
    { name = "OpinioNet Team" }
]
keywords = ["nlp", "opinion-mining", "entity-relation-extraction", "bert", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0",
    "jieba>=0.42.1",
    "tqdm>=4.65.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "draccus>=0.11.5",
    "rich>=14.2.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.290",
    "ipython>=8.12.0",
]

[project.scripts]
train_model = "opinionet.scripts.train:train"
eval_model = "opinionet.scripts.evaluate:evaluate"
pretrain_model = "opinionet.scripts.pretrain:pretrain"
visualize_metrics = "opinionet.scripts.visualize:visualize"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opinionet"]

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.ruff]
line-length = 90
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
